feat: introduce MatchSummary record and update getSummary to return it without side effects